--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -51,18 +51,18 @@ jobs:
     - name: Set env
       run: |
         echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-        echo "chart/values.yaml" >> $VAL_FILE
-        echo ${{ github.sha }} >> $IMAGE_TAG
+        echo "VAL_FILE=chart/values.yaml" >> $GITHUB_ENV
+        echo "IMAGE_TAG=${{ github.sha }}" >> $GITHUB_ENV
 
     - name: Update Image Tag Values
       run: |
         # Update the values.yaml file with the new image tag
-        sed -i 's/'$(grep -o -E "[A-Fa-f0-9]{40}" ${VAL_FILE})'/'${IMAGE_TAG}'/g' ${VAL_FILE}  
+        sed -i 's/'$(grep -o -E "[A-Fa-f0-9]{40}" ${{ env.VAL_FILE }})'/'${{ env.IMAGE_TAG }}'/g' ${{ env.VAL_FILE }}
 
     - name: Update App version
       run: |
         # Update app tag version
-        sed -i 's/'$(grep -o -E "v.([0-9]{1,}\.)+[0-9]{1,}" ${VAL_FILE})'/'${RELEASE_VERSION}'/g' ${VAL_FILE}
+        sed -i 's/'$(grep -o -E "v.([0-9]{1,}\.)+[0-9]{1,}" ${{ env.VAL_FILE }})'/'${{ env.RELEASE_VERSION }}'/g' ${{ env.VAL_FILE }}
 
     - name: Commit the changes made
       run: | 
