--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       
       - name: Login to DockerHub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -48,22 +48,17 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
 
-    - name: Set env
-      run: |
-        echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-        echo "VAL_FILE=chart/values.yaml" >> $GITHUB_ENV
-        echo "IMAGE_TAG=${{ github.sha }}" >> $GITHUB_ENV
-
     - name: Update Image Tag Values
       run: |
+        value_file=chart/values.yaml
+        new_image_tag=${{ github.sha }}
+        app_release_ver=${GITHUB_REF#refs/*/}
+
         # Update the values.yaml file with the new image tag
-        sed -i 's/'$(grep -o -E "[A-Fa-f0-9]{40}" ${{ env.VAL_FILE }})'/'${{ env.IMAGE_TAG }}'/g' ${{ env.VAL_FILE }}
-
-    - name: Update App version
-      run: |
+        sed -i 's/'$(grep -o -E "[A-Fa-f0-9]{40}" ${value_file})'/ecad55220e5267404d7f5cbc0e1104a92a588de7/g' ${value_file}  
+  
         # Update app tag version
-        sed -i 's/'$(grep -o -E "v.([0-9]{1,}\.)+[0-9]{1,}" ${{ env.VAL_FILE }})'/'${{ env.RELEASE_VERSION }}'/g' ${{ env.VAL_FILE }}
-
+        sed -i 's/'$(grep -o -E "v([0-9]{1,}\.)+[0-9]{1,}" ${value_file})'/'${app_release_ver}'/g' ${value_file}
     - name: Commit the changes made
       run: | 
         git config --global user.name 'Humanz'
