--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,8 +2,11 @@ name: build & deploy go-simp modules
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+    - main
+    paths:
+    - 'main.go'
+    - 'chart/'
 
 jobs:
   build:
@@ -13,9 +16,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
        
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV        
-      
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       
@@ -52,17 +52,16 @@ jobs:
       run: |
         value_file=chart/values.yaml
         new_image_tag=${{ github.sha }}
-        app_release_ver=${GITHUB_REF#refs/*/}
 
         # Update the values.yaml file with the new image tag
-        sed -i 's/'$(grep -o -E "[A-Fa-f0-9]{40}" ${value_file})'/ecad55220e5267404d7f5cbc0e1104a92a588de7/g' ${value_file}  
+        sed -i 's/'$(grep -o -E "[A-Fa-f0-9]{40}" ${value_file})'/'${new_image_tag}'/g' ${value_file}
   
         # Update app tag version
-        sed -i 's/'$(grep -o -E "v([0-9]{1,}\.)+[0-9]{1,}" ${value_file})'/'${app_release_ver}'/g' ${value_file}
+        # sed -i 's/'$(grep -o -E "v([0-9]{1,}\.)+[0-9]{1,}" ${value_file})'/'${app_release_ver}'/g' ${value_file}
     - name: Commit the changes made
       run: | 
         git config --global user.name 'Humanz'
         git config --global user.email 'Just@Humanz.moe'
         git add --all
-        git commit -am "updating image&app tag"
+        git commit -am "updating image"
         git push -u origin master
