--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:      
         - name: go-server
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}" 
+          image: "{{ .Values.image.repository }}:{{ .Values.image_tag }}" 
           ports:
             - containerPort: 2525
           env:
